# vigor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build.sh  test.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/vigor/: engine.h  event.h  example_layer.h  global.h  layer.h  shader.h  text_buffer.h  text_layer.h  text_renderer.h  window.h
shaders/: base.v.glsl  text.f.glsl  text.v.glsl
src/: CMakeLists.txt  engine.cpp  example_layer.cpp  main.cpp  shader.cpp  text_buffer.cpp  text_layer.cpp  text_renderer.cpp  window.cpp
